<resources>
    <string name="app_name">Mobile Footprint</string>
    <string name="app_description">Visualizing personal call detail records</string>

    <string name="menu_home">Home</string>
    <string name="menu_mapview">Location history</string>
    <string name="menu_hotspots">Most visited places</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    Last refresh

    <string name="text_home_activity_dashboard_title">Dashboard</string>
    <string name="text_home_activity_pp_title">Preprocessing</string>
    <string name="text_home_activity_about_title">About</string>
    <string name="text_home_activity_refresh">Last refresh: </string>
    <string name="text_home_activity_about">This app was developed during the \"Internet of Services Lab\" master project WS16/17 at Service-centric Networking, TU Berlin.</string>
    <string name="text_activity_about">The CellServiceApp was developed during the \"Internet of Services Lab\" master project WS16/17 at Service-centric Networking, Department of Telecommunication Systems, Technical University Berlin.</string>
    <string name="text_home_activity_preprocessing">Visualization of most visited places require resource intensive calculations. Please run them manually by clicking the below \"Most visited places\" button. Refresh location history data by clicking \"location history\". </string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_map">Location history</string>
    <string name="title_activity_hotspots">Most visited places of last 4 weeks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_about">About</string>

    <string name="access_token">pk.eyJ1IjoiZ29vcmF4IiwiYSI6ImNpd2Fqd215dTAwM2Eyb3A1NmpsaG9uMWEifQ.s_sG7xdrQgDdlYqO7sKfsA</string>
    <!-- Strings related to Settings -->

    <!-- Actual application settings -->
    <string name="pref_header_app">Actual</string>

    <string name="pref_title_collect_data">Enable data collection</string>
    <string name="pref_description_collect_data">Listen for and collect events such as phone calls, text messages, data usage and network related events</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string name="pref_title_restrict_data_usage_tiles">Restrict data usage for map tiles</string>
    <string name="pref_description_restrict_data_usage_tiles">When this option is active, map tiles will only be downloaded, when connected over WiFi</string>
    <string name="pref_title_restrict_data_usage_mozilla">Restrict data usage for MLS</string>
    <string name="pref_description_restrict_data_usage_mozilla">When this option is active, Mozilla Location Service will only be accessed over WiFi</string>

    <string name="description_weekdays_chart">This chart shows the number of events per day of the week. (Aggregated over the selected time range.)</string>
    <string name="description_punchcard_chart">This chart shows the number of events per day.</string>
    <string name="description_month_chart">This chart shows the number of events per day.</string>
    <string name="description_contacts_chart">This chart shows the number of interactions by contact.</string>

    <string name="calls">Calls</string>
    <string name="text_messages">Text messages</string>
    <string name="data_usage">Data usage</string>
    <string name="location_updates">Location updates</string>
    <string name="menu_list">Event list</string>
    <string name="title_activity_list">List</string>

</resources>
