<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="restrict_data_usage_tiles"
        android:summary="@string/pref_description_restrict_data_usage_tiles"
        android:title="@string/pref_title_restrict_data_usage_tiles"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="restrict_data_usage_mozilla"
        android:summary="@string/pref_description_restrict_data_usage_mozilla"
        android:title="@string/pref_title_restrict_data_usage_mozilla"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"/>
        -->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS"/>
    </Preference>
    -->

</PreferenceScreen>
