<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/content_activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_home">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="@string/text_home_activity_dashboard_title"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button_activity_map"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_locationpin_black_24dp"
                android:gravity="left|center"
                android:text="Location history"
                android:textColor="@color/accent_material_light" />

            <Button
                android:id="@+id/button_hotspots"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_map_black_24dp"
                android:gravity="left|center"
                android:text="Most visited places"
                android:textColor="@color/accent_material_light" />

            <Button
                android:id="@+id/button_activity_statistics"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_statistics_black_24dp"
                android:gravity="left|center"
                android:text="Statistics"
                android:textColor="@color/accent_material_light" />

            <Button
                android:id="@+id/button_activity_contacts"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/ic_contacts_black_24dp"
                android:gravity="left|center"
                android:text="Contacts"
                android:textColor="@color/accent_material_light" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_preprocessing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="@string/text_home_activity_pp_title"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/text_home_activity_preprocessing"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/refresh_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="15dp"
                    android:text="@string/text_home_activity_refresh"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_reload"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="Location history"
                    android:textColor="@color/accent_material_light" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/refresh_heatmap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="15dp"
                    android:text="@string/text_home_activity_refresh"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/button_heatmap"
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="Most visited places"
                    android:textColor="@color/accent_material_light" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="@string/text_home_activity_about_title"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/text_home_activity_about"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <Button
                        android:id="@+id/button_more"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:layout_marginRight="10dp"
                        android:padding="0dp"
                        android:text="Read more"
                        android:textColor="@color/accent_material_light" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>